--- a/Front-end/StyleSheets/style.css
+++ b/Front-end/StyleSheets/style.css
@@ -69,3 +69,36 @@ body{
     background-color: var(--beige-color);
     transform: scale(1.3);
 }
+
+.regisztracio{
+    background-color: var(--sage-color);
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 30px;
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
+}
+
+.regisztracio form{
+    display: flex;
+    flex-direction: column;
+}
+
+.regisztracio label{
+    text-align: left;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.regisztracio input{
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 16px;
+}
