--- a/Front-end/StyleSheets/temp.css
+++ b/Front-end/StyleSheets/temp.css
@@ -70,35 +70,69 @@ body{
     transform: scale(1.3);
 }
 
-.regisztracio{
-    background-color: var(--sage-color);
-    padding: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-    box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.1);
-    margin-top: 30px;
-    width: 100%;
-    max-width: 400px;
+
+                        /* Regisztráció / bejelentkezés form */
+
+
+#registerBody{
+    font-family: 'Poppins', sans-serif;
+}
+
+.container{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background-image: url(abundant-collection-antique-books-wooden-shelves-generated-by-ai.jpg);
+    background-size: cover;
+  
+}
+
+.form-box{
+    width: 90%;
+    max-width: 450px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: #fff;
+    padding: 50px 60px 70px;
     text-align: center;
 }
 
-.regisztracio form{
+.form-box h1{
+    font-size: 30px;
+    margin-bottom: 60px;
+    color: blue;
+    position: relative;
+}
+.form-box h1::after{
+    content: '';
+    width: 30px;
+    height: 4px;
+    border-radius: 3px;
+    background-color: blue;
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.input-field{
+    background: #eaeaea;
+    margin: 15px 0;
+    border-radius: 3px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+}
+input{
+    width: 100%;
+    background: transparent;
+    border: 0;
+    outline: 0;
+    padding: 18px 15px;
 }
 
-.regisztracio label{
-    text-align: left;
-    font-weight: bold;
-    margin-top: 10px;
-}
-
-.regisztracio input{
-    width: calc(100% - 20px);
-    padding: 8px;
-    margin-top: 5px;
-    border: 1px solid black;
-    border-radius: 5px;
-    font-size: 16px;
+.input-field i{
+    margin-left: 15px;
+    color: #999;
 }
