--- a/Front-end/StyleSheets/style.css
+++ b/Front-end/StyleSheets/style.css
@@ -99,13 +99,14 @@ body{
     border-radius: 10px;
     text-align: center;
 }
-
+.admin-form-box h1,
 .form-box h1{
     font-size: 30px;
     margin-bottom: 60px;
     color: var(--oliveDarb-color);
     position: relative;
 }
+.admin-form-box h1::after,
 .form-box h1::after{
     content: '';
     width: 30px;
@@ -164,4 +165,20 @@ input{
     padding-top: 30px;
     display: flex;
     justify-content: space-evenly;
+}
+
+.admin-container{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+.admin-form-box{
+    top: 50%;
+    left: 50%;
+    margin-top: 50px;
+    background: var(--sage-color);
+    padding: 50px 60px 70px;
+    border-radius: 10px;
+    text-align: center;
 }
