--- a/Front-end/StyleSheets/style.css
+++ b/Front-end/StyleSheets/style.css
@@ -127,12 +127,20 @@ body{
     align-items: center;
 }
 
-input{
+input, select, .subgenres-select{
     width: 100%;
     background: transparent;
     border: 0;
     outline: 0;
     padding: 18px 15px;
+}
+
+.subgenres-select{
+    width: 100% !important;
+    background: transparent !important;
+    border:  0 !important;
+    outline: 0 !important;
+    padding: 18px 15px !important;
 }
 
 .input-field i{
