--- a/Front-end/StyleSheets/style.css
+++ b/Front-end/StyleSheets/style.css
@@ -190,3 +190,79 @@ input, select, .subgenres-select{
     border-radius: 10px;
     text-align: center;
 }
+.admin_print{
+    width: 70%;
+    margin: auto;
+    border: 1px solid red;
+    margin-top: 50px;
+}
+.admin_print_element{
+    width: 90%;
+    margin: auto;
+    text-align: center;
+}
+table{
+    background-color: white;
+    width: 60%;
+    margin: auto;
+    border-collapse: collapse;
+    margin-top: 20px;
+    border: 1px solid black;
+}
+th{
+    width: 20%;
+    border: 1px solid black;
+
+}
+th:first-child{
+    width: 60%;
+
+}
+td{
+    font-size: 20px;
+    padding: 5px;
+    border: 1px solid black;
+    text-align: center;
+    
+}
+.print_input{
+    background-color: #e6e6e6;
+    border-radius: 5px;
+    text-align: center;
+    width: 60%;
+    height: 15px;
+    padding: 8px;
+}
+.admin_print_element a{
+    padding: 2px 10px;
+    border: 1px outset buttonborder;
+    background-color: rgb(241, 237, 237);
+    font: -webkit-small-control;
+    text-align: center;
+    cursor: default;
+    text-decoration: none;
+    color: black;
+    border-radius: 4px;
+}
+.admin_print_element a:hover{
+    background-color: rgb(221, 220, 220);
+}
+
+#book-table th{
+    width: 20%;
+}
+#book-table th:nth-child(4){
+    width: 10%;
+}
+#book-table th:nth-child(5){
+    width: 10%;
+}
+#book-table th:nth-child(6){
+    width: 10%;
+}
+#book-table th:nth-child(7){
+    width: 10%;
+}
+#book-table td{
+    font-size: 16px;
+}
