--- a/Front-end/StyleSheets/style.css
+++ b/Front-end/StyleSheets/style.css
@@ -12,6 +12,7 @@ body{
     background-color: var(--background-color);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
     margin: 0;
+    padding-bottom: 50px;
 }
 
 .topbar{
@@ -193,7 +194,6 @@ input, select, .subgenres-select{
 .admin_print{
     width: 70%;
     margin: auto;
-    border: 1px solid red;
     margin-top: 50px;
 }
 .admin_print_element{
@@ -265,4 +265,11 @@ td{
 }
 #book-table td{
     font-size: 16px;
+}
+
+#publisher-table th{
+    width: 25%;
+}
+#publisher-table th:last-child{
+    width: 10%;
 }
