--- a/Front-end/StyleSheets/style.css
+++ b/Front-end/StyleSheets/style.css
@@ -294,3 +294,123 @@ td{
 #market-table th:nth-child(6){
     width: 10%;
 }
+
+
+
+                        /* Könyvek felület*/
+
+
+
+.szuro-doboz {
+    background-color: #beb58a;
+    padding: 40px;
+    border-radius: 40px;
+    max-width: 1200px;
+    margin: 50px auto auto auto;
+}
+
+.szuro-form {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.kategoria-es-kereso {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.kategoriak {
+    background-color: #f6f3db;
+    padding: 15px;
+    border-radius: 20px;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    flex: 1;
+}
+
+.kategoriak label {
+    display: inline-flex;
+    align-items: center;
+    border: 2px solid #3c370d;
+    padding: 10px 20px;
+    border-radius: 25px;
+    cursor: pointer;
+    font-weight: bold;
+    background-color: white;
+}
+
+.kategoriak input[type="checkbox"] {
+    display: none;
+}
+
+.kategoriak input[type="checkbox"]:checked + span {
+    background-color: #3c370d;
+    color: white;
+    border-radius: 20px;
+    padding: 5px 10px;
+}
+
+.kereso {
+    flex: 0 0 300px;
+    padding: 15px;
+    border-radius: 25px;
+    border: 1px solid #ccc;
+    background-color: var(--background-color);
+    font-size: 16px;
+}
+
+.arszuro {
+    flex: 1;
+}
+
+.arszuro input[type=range] {
+    width: 97%;
+    appearance: none;
+    height: 6px;
+    background: var(--background-color);
+    border-radius: 3px;
+    outline: none;
+}
+
+.arszuro input[type=range]::-webkit-slider-thumb {
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: #3c370d;
+    cursor: pointer;
+}
+
+.arszuro input[type=range]::-moz-range-thumb {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: #3c370d;
+    cursor: pointer;
+}
+
+.arszuro output {
+    display: block;
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+.szures-gomb {
+    background-color: #3c370d;
+    color: white;
+    padding: 15px 30px;
+    border-radius: 20px;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    align-self: center;
+}
+
+.szures-gomb:hover {
+    background-color: #2e2b0a;
+}
