osszetett lekerdezesek kesz

--- a/Front-end/StyleSheets/statistics_style.css
+++ b/Front-end/StyleSheets/statistics_style.css
@@ -25,3 +25,32 @@ ol{
 .placement:nth-child(3) {
     color: #cd7f32; /* bronz */
 }
+
+table {
+        width: 80%;
+        margin: 30px auto;
+        border-collapse: collapse;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #fff;
+    }
+
+    th {
+        text-align: center !important;
+        background-color: #504B14;  
+        color: white;
+        padding: 12px 15px;
+        text-align: left;
+        font-size: 16px;
+        text-transform: uppercase;
+    }
+
+    td {
+        padding: 12px 15px;
+        border-bottom: 1px solid #ddd;
+        font-size: 15px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #f9f9f9;
+    }
